# Milestone1-zomato

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml  start.sh
.github/workflows/: ci.yml
backend/src/milestone_zomato/: __init__.py  __main__.py
backend/src/milestone_zomato_api/: dto.py  main.py  summary.py
backend/src/milestone_zomato_filter/: __init__.py  engine.py  matching.py  validate.py
backend/src/milestone_zomato_ingestion/: __init__.py  __main__.py  loader.py  mapping.py  normalize.py  pipeline.py
backend/src/milestone_zomato_ops/: cache.py  eval.py  logging.py  middleware.py
backend/src/milestone_zomato_recommend/: __init__.py  client.py  engine.py  prompts.py
backend/tests/phase0/: test_phase0.py
backend/tests/phase1/: test_phase1_normalize.py  test_phase1_pipeline.py
backend/tests/phase2/: test_phase2_filter.py
backend/tests/phase3/: test_phase3_recommend.py
backend/tests/phase4/: test_phase4_api.py
backend/tests/phase5/: test_ops.py
data/cache/: restaurants.meta.json  restaurants.parquet
docs/: DEPLOYMENT_GUIDE.md  edge-cases.md  frontend-stitch-prompt.md  phase-wise-architecture.md  problemstatement.md
frontend/: app.js  index.html  style.css
frontend-next/: package-lock.json  package.json
frontend-next/screens/stitch_zomato_recommendation_ui/: DESIGN.md  code.html
frontend-next/src/app/: globals.css  layout.tsx  page.tsx
frontend-next/src/components/: CuisineCategories.tsx  DiscoveryHub.tsx  FeatureSection.tsx  (+8 more)
streamlit_app/: app.py  requirements.txt
streamlit_app/.streamlit/: secrets.toml.example
(+12 files in other folders)
