[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "milestone-zomato"
version = "0.1.0"
description = "AI-powered restaurant recommendation (Zomato-inspired milestone)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "datasets>=2.16",
  "pandas>=2.0",
  "pyarrow>=14.0",
  "pydantic>=2.5",
  "pydantic-settings>=2.1",
  "openai>=1.0.0",
  "tenacity>=8.0.0",
  "fastapi[standard]>=0.110.0",
  "groq>=0.5.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
milestone-zomato = "milestone_zomato.__main__:main"
milestone-zomato-ingest = "milestone_zomato_ingestion.__main__:main"

[tool.setuptools.packages.find]
where = ["backend/src"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend/src"]

[tool.ruff]
target-version = "py39"
line-length = 120
src = ["backend/src", "backend/tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]
